Use pow if powf is not available.

BUG: 125446


svn path=/branches/koffice/1.5/koffice/; revision=529238